--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,18 +4,24 @@ on:
   push:
     branches: [ main, master ]
 
+# Grant the workflow the permissions required to publish
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      pages: write
-      id-token: write
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
-          persist-credentials: false
+          # allow the action to use the repository token for pushing
+          persist-credentials: true
+          # fetch full history so git operations succeed when pushing
+          fetch-depth: 0
 
       - name: Use Node.js
         uses: actions/setup-node@v4
@@ -31,5 +37,6 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
-          github_token: ${{ secrets.GH_TOKEN }}
+          # prefer the built-in token; falls back to PAT if you set GH_PAT
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
